<?php

class Emprunt
{
    protected DateTime $dateEmprunt;
    protected DateTime $dateRetourEstimee;
    protected DateTime $dateRetour;

}